# anxious

./: Cargo.toml  README.md
.github/workflows/: code-coverage.yaml  static-analysis.yaml
src/: anxious_bitwise_int.rs  anxious_int.rs  lib.rs  nominal_int.rs  test.rs
