[package]
name = "anxious"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "anxious provides a panic-free dialect of Rust"
homepage = "https://github.com/mspiegel/anxious"
repository = "https://github.com/mspiegel/anxious"
readme = "README.md"

[features]
nightly = []

[dependencies]

